# brainreg

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  BR-CORE-README.md  BR-NAPARI-README.md  CITATION.CFF  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml  tmate_debug.yaml
.napari/: DESCRIPTION.md  config.yml
brainreg/: __init__.py  boundaries.py  brainreg.py  cli.py  exceptions.py  main.py  paths.py  volume.py
brainreg/backend/elastix/: elastix.py  run.py
brainreg/backend/niftyreg/: brain_registration.py  niftyreg_binaries.py  parameters.py  parser.py  paths.py  registration.py  registration_params.py  run.py  utils.py
brainreg/core/: cli.py  exceptions.py  main.py
brainreg/core/backend/ants/: parser.py  paths.py  registration.py  run.py
brainreg/core/backend/niftyreg/: parser.py  registration.py  run.py  utils.py
brainreg/core/utils/: boundaries.py  preprocess.py  volume.py
brainreg/napari/: napari.yaml  register.py  sample_data.py  util.py
brainreg/nifty_reg/src/: README.txt
brainreg/nifty_reg/src/cmake/: FindOPENCL.cmake
brainreg/nifty_reg/src/reg-apps/: CMakeLists.txt  reg_average.h.in  reg_f3d.cpp  reg_f3d.h.in  reg_jacobian.h.in  reg_measure.cpp  reg_polyAffine.cpp  reg_resample.cpp  reg_tools.h.in  reg_transform.cpp  reg_transform.h.in
brainreg/nifty_reg/src/reg-io/: _reg_ReadWriteMatrix.h  _reg_stringFormat.cpp
brainreg/nifty_reg/src/reg-io/nifti/: LICENSE  (+4 more)
brainreg/nifty_reg/src/reg-lib/: AffineDeformationFieldKernel.h  AladinContent.cpp  CMakeLists.txt  ConvolutionKernel.h  Kernel.h  KernelFactory.h  OptimiseKernel.h  ResampleImageKernel.h  _reg_aladin.cpp  _reg_aladin.h  _reg_base.cpp  _reg_base.h  _reg_f3d.cpp  _reg_f3d.h  _reg_f3d_sym.cpp  _reg_polyAffine.cpp
brainreg/nifty_reg/src/reg-test/: CMakeLists.txt  reg_test_affine_deformation_field.cpp  reg_test_coherence_blockMatching.cpp  reg_test_compose_deformation_field.cpp  reg_test_computation_time.cpp  reg_test_fullAffine.cpp  reg_test_fullAffine_cl.cpp  reg_test_fullAffine_cuda.cpp  reg_test_fullNonlinear.cpp  reg_test_fullSymNonlinear.cpp  reg_test_interpolation_cl.cpp  reg_test_interpolation_cuda.cpp  reg_test_matrix_operation.cpp  reg_test_measure.cpp  reg_test_mindsscDescriptor.cpp  reg_test_nonlinear_deformation_field.cpp  reg_test_svd.cpp
brainreg/tools/: image.py
brainreg/utils/: boundaries.py  misc.py  preprocess.py  run.py  volume.py
brainreg_napari/: __init__.py  napari.yaml  plugins.py  register.py  sample_data.py  util.py
brainreg_napari/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
brainreg_napari/tests/: test_brainreg_napari.py
docs/: Makefile  conf.py  index.rst  make.bat
examples/: load_sample_data.py  registration.py
src/brainreg/: __init__.py  cli.py  main.py  paths.py
src/brainreg/backend/niftyreg/: niftyreg_binaries.py  parameters.py  paths.py  registration.py  run.py
src/brainreg/nifty_reg/src/: CTestConfig.cmake  Doxyfile.in  update_version_hook
src/brainreg/utils/: misc.py  volume.py
tests/: test_brainreg_napari.py
tests/data/input/hemisphere_l/: half_MB_0000.tif  half_MB_0002.tif  half_MB_0003.tif  half_MB_0004.tif  half_MB_0005.tif  half_MB_0008.tif  half_MB_0011.tif  half_MB_0012.tif  half_MB_0013.tif  half_MB_0014.tif  half_MB_0016.tif  half_MB_0017.tif  half_MB_0019.tif  half_MB_0021.tif  half_MB_0022.tif  half_MB_0023.tif  half_MB_0024.tif  half_MB_0025.tif  half_MB_0027.tif  half_MB_0028.tif  half_MB_0029.tif  half_MB_0033.tif  half_MB_0034.tif  half_MB_0035.tif  half_MB_0038.tif  half_MB_0039.tif  half_MB_0040.tif  half_MB_0041.tif  half_MB_0042.tif  half_MB_0044.tif  half_MB_0045.tif  half_MB_0048.tif  half_MB_0049.tif  half_MB_0050.tif  half_MB_0051.tif  half_MB_0052.tif  half_MB_0053.tif  half_MB_0054.tif  half_MB_0058.tif  half_MB_0060.tif  (+73 more)
tests/data/input/hemisphere_r/: half_MB_ 000.tif  half_MB_ 001.tif  half_MB_ 002.tif  half_MB_ 003.tif  half_MB_ 004.tif  half_MB_ 005.tif  half_MB_ 006.tif  half_MB_ 007.tif  half_MB_ 008.tif  half_MB_ 009.tif  half_MB_ 010.tif  half_MB_ 011.tif  half_MB_ 012.tif  half_MB_ 013.tif  half_MB_ 014.tif  half_MB_ 015.tif  half_MB_ 016.tif  half_MB_ 017.tif  half_MB_ 018.tif  half_MB_ 019.tif  half_MB_ 020.tif  half_MB_ 021.tif  half_MB_ 022.tif  half_MB_ 023.tif  half_MB_ 024.tif  half_MB_ 025.tif  half_MB_ 026.tif  half_MB_ 027.tif  half_MB_ 028.tif  half_MB_ 029.tif  half_MB_ 030.tif  half_MB_ 031.tif  half_MB_ 032.tif  half_MB_ 033.tif  half_MB_ 034.tif  half_MB_ 035.tif  half_MB_ 036.tif  half_MB_ 037.tif  half_MB_ 038.tif  half_MB_ 039.tif  (+201 more)
tests/data/input/pre_processing/: 191797_red_mm_SLA_layer280.tif  191797_red_mm_SLA_layer280_clean_no_bg.tif
tests/data/registration_output/Darwin/: boundaries.tiff  brainreg.json  downsampled_standard_brain.tiff  volumes.csv
tests/data/registration_output/Darwin_arm/: boundaries.tiff  downsampled_brain.tiff  downsampled_standard.tiff  registered_hemispheres.tiff  volumes.csv
tests/data/registration_output/Darwin_intel/: downsampled.tiff  registered_hemispheres.tiff
tests/data/registration_output/Linux/: boundaries.tiff  brainreg.json  downsampled.tiff  downsampled_brain data.tiff  downsampled_brain.tiff  downsampled_standard.tiff  downsampled_standard_brain data.tiff  downsampled_standard_brain.tiff  registered_hemispheres.tiff  volumes.csv
tests/data/registration_output/Windows/: boundaries.tiff  downsampled.tiff  downsampled_standard.tiff  downsampled_standard_brain data.tiff  registered_hemispheres.tiff  volumes.csv
tests/tests/: test_fmost_preprocessing.py
tests/tests/test_backend/: test_niftyreg_detection.py  test_registration.py
tests/tests/test_integration/: test_exceptions.py  test_hemisphere_registration.py  test_registration.py  utils.py
tests/tests/test_unit/: test_cli.py  test_exceptions.py  test_misc.py
travis/: deploy_linux.sh  install_test_linux.sh  install_test_osx.sh  lint.sh  test_windows.sh
~/Desktop/elastix/: brainreg.json
(+306 files in other folders)
