[project]
name = "brainreg"
description = "Automated multi-atlas whole-brain microscopy registration"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Adam Tyson, Charly Rousseau, Stephen Lenzi", email = "code@adamltyson.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: napari",
]
requires-python = ">=3.9"
dependencies = [
    "bg-atlasapi",
    "bg-space",
    "brainglobe-utils>=0.2.7",
    "fancylog",
    "imio",
    "numpy",
    "scikit-image",
]
dynamic = ["version"]

[project.optional-dependencies]
napari = [
    "brainglobe-napari-io >=0.3.2",
    "brainglobe-segmentation >= 1.0.0",
    "magicgui",
    "napari-plugin-engine >= 0.1.4",
    "napari[pyqt5]",
    "pooch>1",                          # For sample data
    "qtpy",
]
dev = [
    "black",
    "check-manifest",
    "gitpython",
    "napari[pyqt5]",
    "pre-commit",
    "pytest-cov",
    "pytest-qt",
    "pytest",
    "setuptools_scm",
    "tox",
]

[project.entry-points."napari.manifest"]
brainreg = "brainreg.napari:napari.yaml"

[project.scripts]
brainreg = "brainreg.core.cli:main"

[project.urls]
"Homepage" = "https://brainglobe.info"
"Bug Tracker" = "https://github.com/brainglobe/brainreg/issues"
"Documentation" = "https://docs.brainglobe.info/brainreg"
"Source Code" = "https://github.com/brainglobe/brainreg"
"User support" = "https://forum.image.sc/tag/brainglobe"
"Twitter" = "https://twitter.com/brain_globe"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainreg*"]

[tool.setuptools.package-data]
include = ["brainreg*"]

[tool.pytest.ini_options]
addopts = "--cov=brainreg"

[tool.black]
line-length = 79
skip-string-normalization = false
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
select = ["I", "E", "F"]
fix = true
