[metadata]
name = brainreg-gui
version = 0.0.1
author = Stephen Lenzi
author_email = s.lenzi@ucl.ac.uk
license = MIT
url = https://github.com/brainglobe/brainreg-napari
description = A simple plugin for running and viewing brainreg results
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/brainglobe/brainreg-napari/issues
    Documentation = https://github.com/brainglobe/brainreg-napari#README.md
    Source Code = https://github.com/brainglobe/brainreg-napari
    User Support = https://forum.image.sc/tag/brainglobe

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    brainreg-napari = brainreg_napari
